
classDiagram
direction LR

class Tenant {
  +UUID id
  +string name
  +string slug
}

class Unit {
  +UUID id
  +UUID tenantId
  +string name
  +string timezone
  +bool serviceFeeEnabled
  +decimal serviceFeePercent
}

class User {
  +UUID id
  +UUID tenantId
  +string name
  +string email
  +UserStatus status
}

class Area {
  +UUID id
  +UUID tenantId
  +UUID unitId
  +string name
  +int sortOrder
}

class Table {
  +UUID id
  +UUID tenantId
  +UUID unitId
  +UUID areaId
  +string code
  +int capacity
  +TableStatus status
}

class Category {
  +UUID id
  +UUID tenantId
  +string name
  +int sortOrder
  +bool active
}

class Product {
  +UUID id
  +UUID tenantId
  +UUID categoryId
  +string name
  +decimal basePrice
  +bool active
}

class Tab {
  +UUID id
  +UUID tenantId
  +UUID unitId
  +UUID tableId
  +UUID openedByUserId
  +TabStatus status
  +datetime openedAt
  +datetime closedAt?
  +decimal subtotalAmount
  +decimal serviceFeeAmount
  +decimal totalAmount
  +decimal paidAmount
  +decimal dueAmount
}

class Order {
  +UUID id
  +UUID tenantId
  +UUID unitId
  +UUID tabId
  +UUID createdByUserId
  +OrderStatus status
  +datetime createdAt
  +datetime sentAt?
}

class OrderItem {
  +UUID id
  +UUID tenantId
  +UUID orderId
  +UUID productId
  +string productNameSnapshot
  +decimal unitPriceSnapshot
  +decimal qty
  +string notes?
  +OrderItemStatus status
}

class Payment {
  +UUID id
  +UUID tenantId
  +UUID unitId
  +UUID tabId
  +UUID createdByUserId
  +PaymentMethod method
  +decimal amount
  +PaymentStatus status
  +datetime paidAt?
  +string externalRef?
}

%% Core SaaS
Tenant "1" --> "0..*" Unit : has
Tenant "1" --> "0..*" User : has
Tenant "1" --> "0..*" Category : has
Tenant "1" --> "0..*" Product : has

%% Floor
Unit "1" --> "0..*" Area : has
Unit "1" --> "0..*" Table : has
Area "1" --> "0..*" Table : contains

%% Sales
Unit "1" --> "0..*" Tab : runs
Table "1" --> "0..*" Tab : history
User "1" --> "0..*" Tab : openedBy

Tab "1" --> "0..*" Order : includes
User "1" --> "0..*" Order : createdBy
Order "1" --> "1..*" OrderItem : items
Product "1" --> "0..*" OrderItem : soldAs

Tab "1" --> "0..*" Payment : paidBy
User "1" --> "0..*" Payment : createdBy

%% Notes
note for Table "Business rule: max 1 Tab with status=open per Table"
note for Order "Recommended: only sent Orders contribute to Tab totals"
